--- a/Naxex test/Base.lproj/LaunchScreen.storyboard
+++ b/Naxex test/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Naxes" translatesAutoresizingMaskIntoConstraints="NO" id="did-9A-tjt">
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Naxes" translatesAutoresizingMaskIntoConstraints="NO" id="did-9A-tjt">
                                 <rect key="frame" x="191" y="260" width="218" height="81"/>
                             </imageView>
                         </subviews>
